--- a/TravelPlanner.Client/package.json
+++ b/TravelPlanner.Client/package.json
@@ -12,15 +12,35 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "datejs": "^1.0.0-rc3",
+    "embla-carousel-react": "^8.5.1",
     "headlessui": "^0.0.0",
     "heroicons": "^2.2.0",
+    "lucide-react": "^0.468.0",
+    "luxon": "^3.5.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -31,7 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
 }
