--- a/TravelPlanner.Client/package.json
+++ b/TravelPlanner.Client/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.0.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
